# libudjatdb

./: .gitignore  CHANGELOG  Makefile.in  PKGBUILD.mingw  README.md  configure.ac  cppdb.cbp  cppdb.xml  meson.build  meson.options  sqlite.xml  test.xml
.github/workflows/: codeql.yml  wincheck.yml
debian/: changelog  control  rules  udjat-module-sqlite.dsc
rpm/: _multibuild  _service  _servicedata  libudjatdb.spec  mingw64-libudjatsqlite.spec  udjat-module-cppdb.spec  udjat-module-database.spec
src/: config.h.in
src/include/: config.h.in
src/include/private/: controller.h  cppdb.h  module.h  session.h  sqlite.h  urlqueue.h
src/include/udjat/agent/: sql.h
src/include/udjat/alert/: sql.h
src/include/udjat/sql/: query.h  statement.h
src/include/udjat/tools/: sql.h
src/include/udjat/tools/actions/: sql.h
src/include/udjat/tools/sql/: action.h  apicall.h  module.h  query.h  script.h  statement.h
src/module/: factory.cc  init.cc  worker.cc
src/testprogram/: cppdb.cc  sqlite.cc  testprogram.cc
